--- a/starflight-client-android/build.gradle
+++ b/starflight-client-android/build.gradle
@@ -1,5 +1,30 @@
 apply plugin: 'com.android.library'
 
+ext {
+    bintrayRepo = 'starcut'
+    bintrayName = 'starflight-client-android'
+
+    publishedGroupId = 'com.starcut.starflight'
+    libraryName = 'Starflight-android'
+    artifact = 'starflight-client-android'
+
+    libraryDescription = 'StarFlight Push Notification Android API'
+
+    siteUrl = 'https://github.com/StarcutFinland/starflight-android'
+    gitUrl = 'https://github.com/StarcutFinland/starflight-android.git'
+    githubRepository= 'StarcutFinland/starflight-android'
+
+    libraryVersion = '1.0'
+
+    developerId = 'starcutfinland'
+    developerName = 'Starcut Finland'
+    developerEmail = 'support@starflight.io'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
@@ -33,3 +58,6 @@ dependencies {
     })
     testCompile 'junit:junit:4.12'
 }
+
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
