--- a/starflight-client-android/build.gradle
+++ b/starflight-client-android/build.gradle
@@ -14,7 +14,7 @@ ext {
     gitUrl = 'https://github.com/StarcutFinland/starflight-android.git'
     githubRepository= 'StarcutFinland/starflight-android'
 
-    libraryVersion = '1.0'
+    libraryVersion = '1.0.1'
 
     developerId = 'starcutfinland'
     developerName = 'Starcut Finland'
@@ -26,15 +26,14 @@ ext {
 }
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 28
     useLibrary 'org.apache.http.legacy' //Needed for StarflightClient HTTP requests
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        targetSdkVersion 28
+        versionCode 2
+        versionName "1.0.1"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -48,15 +47,18 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.google.android.gms:play-services-gcm:11.0.1'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation ('com.google.android.gms:play-services-gcm:16.0.0'){
+        exclude group: "com.android.support", module: "support-media-compat"
+        exclude group: "com.android.support", module: "support-v4"
+    }
 
     //Test module
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
 }
 
 apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
